Cloud Consulting/force-app/main/default/objects/Out_office_req__c/Out_office_req__c.object-meta.xml
<CustomObject>
    <label>Out of office request</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Out of office requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>