Cloud Consulting/force-app/main/default/objects/Out_office_req__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Out of office requests</relationshipLabel>
    <relationshipName>Out_office_requests</relationshipName>
    <type>Lookup</type>
</CustomField>