Cloud Consulting/force-app/main/default/objects/Out_office_req__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Out_of_office_requests</relationshipName>
    <type>Lookup</type>
</CustomField>